--- a/ManageGo/Views/LoginPage.xaml
+++ b/ManageGo/Views/LoginPage.xaml
@@ -1,89 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="true"
              BackgroundColor="#f9fafb"
              xmlns:local="clr-namespace:ManageGo"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ManageGo.LoginPage">
-   <RelativeLayout>
-   <StackLayout 
+    <RelativeLayout>
+        <StackLayout
             RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=1}"
             RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=1}"
             Spacing="0">
-        <StackLayout Orientation="Horizontal" Padding="8" HeightRequest="42">
-            <Image Source="logo.png"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
-        </StackLayout>
-        <Label Text="Welcome" Style="{StaticResource PageTitle}" />
-        <BoxView HeightRequest="1" Margin="0,8,0,8" BackgroundColor="{x:StaticResource Primary}" HorizontalOptions="FillAndExpand"/>
-        <ScrollView BackgroundColor="#f9fafb" VerticalOptions="FillAndExpand">
-            <StackLayout VerticalOptions="CenterAndExpand" Padding="53,0,52,0">
-                <Label Text="Email address:" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" HorizontalOptions="CenterAndExpand"/>
-                <local:CustomEntry Placeholder="Enter your email" Text="{Binding UserEmail}" />
-                <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="{StaticResource Grey-Light-2}" />
-                <Label Text="Password:" Margin="0,35,0,0" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" HorizontalOptions="CenterAndExpand"/>
-                <local:CustomEntry Placeholder="Password" Text="{Binding UserPassword}" IsPassword="true" />
-                <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="{StaticResource Grey-Light-2}" />
-                <StackLayout IsVisible="{Binding IsBiometricsLabelVisible}" Orientation="Horizontal" Padding="17,22,17,22" HorizontalOptions="CenterAndExpand">
-                    <Image Source="{Binding AuthCheckBoxIcon}" VerticalOptions="CenterAndExpand"/>
-                    <Label Text="{Binding AuthString}" HorizontalTextAlignment="Center" VerticalOptions="Center" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" />
-                    <StackLayout.GestureRecognizers>
-                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnEnableBioAuthTapped}" />
-                    </StackLayout.GestureRecognizers>
-                </StackLayout>
-                 <StackLayout IsVisible="{Binding IsBioLoginVisible}" Orientation="Horizontal" Padding="17,22,17,22" HorizontalOptions="CenterAndExpand">
-                    <Label Text="{Binding BioLoginButtonText}" HorizontalTextAlignment="Center" VerticalOptions="Center" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" />
-                    <StackLayout.GestureRecognizers>
-                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnBioLoginButtonTapped}" />
-                    </StackLayout.GestureRecognizers>
-                </StackLayout>
-                <Button Command="{Binding OnLoginButtonTapped}" TextColor="White" Margin="0,17,0,0" Text="Log in" FontSize="Medium" FontAttributes="Bold" BackgroundColor="{Binding LoginButtonBgColor}" CornerRadius="4" Padding="4"/>
-                <StackLayout HorizontalOptions="CenterAndExpand" Padding="8,21,8,21">
-                    <Label Text="Forgot your password?" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" HorizontalOptions="CenterAndExpand"/>
-                    <Label Text="Click to reset" HorizontalOptions="CenterAndExpand" TextColor="Red" FontSize="Small"/>
-                    <StackLayout.GestureRecognizers>
-                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnResetPasswordTapped}" />
-                    </StackLayout.GestureRecognizers>
-                </StackLayout>
-                <StackLayout HorizontalOptions="CenterAndExpand" Padding="8,12,8,21">
-                    <Label Text="Don't have an account yet?" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" HorizontalOptions="CenterAndExpand"/>
-                    <Label Text="Contact us to sign up" HorizontalOptions="CenterAndExpand" TextColor="{x:StaticResource Primary}" FontSize="Small"/>
-                </StackLayout>
+            <StackLayout Orientation="Horizontal"
+                         Padding="8"
+                         HeightRequest="42">
+                <Image Source="logo.png"
+                       VerticalOptions="CenterAndExpand"
+                       HorizontalOptions="CenterAndExpand" />
             </StackLayout>
-        </ScrollView>
+            <Label Text="Welcome"
+                   Style="{StaticResource PageTitle}" />
+            <BoxView HeightRequest="1"
+                     Margin="0,8,0,8"
+                     BackgroundColor="{x:StaticResource Primary}"
+                     HorizontalOptions="FillAndExpand" />
+            <ScrollView BackgroundColor="#f9fafb"
+                        VerticalOptions="FillAndExpand">
+                <StackLayout VerticalOptions="CenterAndExpand"
+                             Padding="53,0,52,0">
+                    <Label Text="Email address:"
+                           TextColor="{x:StaticResource Grey-Mid-1}"
+                           FontSize="Small"
+                           HorizontalOptions="CenterAndExpand" />
+                    <local:CustomEntry Placeholder="Enter your email"
+                                       Text="{Binding UserEmail}" />
+                    <BoxView HeightRequest="1"
+                             Margin="0,-4,0,0"
+                             BackgroundColor="{StaticResource Grey-Light-2}" />
+                    <Label Text="Password:"
+                           Margin="0,35,0,0"
+                           TextColor="{x:StaticResource Grey-Mid-1}"
+                           FontSize="Small"
+                           HorizontalOptions="CenterAndExpand" />
+                    <local:CustomEntry Placeholder="Password"
+                                       Text="{Binding UserPassword}"
+                                       IsPassword="true" />
+                    <BoxView HeightRequest="1"
+                             Margin="0,-4,0,0"
+                             BackgroundColor="{StaticResource Grey-Light-2}" />
+                    <StackLayout IsVisible="{Binding IsBiometricsLabelVisible}"
+                                 Orientation="Horizontal"
+                                 Padding="17,22,17,22"
+                                 HorizontalOptions="CenterAndExpand">
+                        <Image Source="{Binding AuthCheckBoxIcon}"
+                               VerticalOptions="CenterAndExpand" />
+                        <Label Text="{Binding AuthString}"
+                               HorizontalTextAlignment="Center"
+                               VerticalOptions="Center"
+                               TextColor="{x:StaticResource Grey-Mid-1}"
+                               FontSize="Small" />
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnEnableBioAuthTapped}" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                    <StackLayout IsVisible="{Binding IsBioLoginVisible}"
+                                 Orientation="Horizontal"
+                                 Padding="17,22,17,22"
+                                 HorizontalOptions="CenterAndExpand">
+                        <Label Text="{Binding BioLoginButtonText}"
+                               HorizontalTextAlignment="Center"
+                               VerticalOptions="Center"
+                               TextColor="{x:StaticResource Grey-Mid-1}"
+                               FontSize="Small" />
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnBioLoginButtonTapped}" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                    <Button Command="{Binding OnLoginButtonTapped}"
+                            TextColor="White"
+                            Margin="0,17,0,0"
+                            Text="Log in"
+                            FontSize="Medium"
+                            FontAttributes="Bold"
+                            BackgroundColor="{Binding LoginButtonBgColor}"
+                            CornerRadius="4"
+                            Padding="4" />
+                    <StackLayout HorizontalOptions="CenterAndExpand"
+                                 Padding="8,21,8,21">
+                        <Label Text="Forgot your password?"
+                               TextColor="{x:StaticResource Grey-Mid-1}"
+                               FontSize="Small"
+                               HorizontalOptions="CenterAndExpand" />
+                        <Label Text="Click to reset"
+                               HorizontalOptions="CenterAndExpand"
+                               TextColor="Red"
+                               FontSize="Small" />
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnResetPasswordTapped}" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                    <StackLayout HorizontalOptions="CenterAndExpand"
+                                 Padding="8,12,8,21">
+                        <Label Text="Don't have an account yet?"
+                               TextColor="{x:StaticResource Grey-Mid-1}"
+                               FontSize="Small"
+                               HorizontalOptions="CenterAndExpand" />
+                        <Label Text="Contact us to sign up"
+                               HorizontalOptions="CenterAndExpand"
+                               TextColor="{x:StaticResource Primary}"
+                               FontSize="Small" />
+                    </StackLayout>
+                </StackLayout>
+            </ScrollView>
         </StackLayout>
-        <Frame HasShadow="false" 
+        <Frame HasShadow="false"
                x:Name="WaitFrame"
                IsVisible="{Binding IsLoggingIn}"
-               BackgroundColor="#CC000000" 
+               BackgroundColor="#CC000000"
                CornerRadius="12"
                RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=0.4}"
                RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=0.25}"
                RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=0.2}"
                RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width, Factor=0.5}">
             <StackLayout VerticalOptions="CenterAndExpand">
-                <ActivityIndicator VerticalOptions="CenterAndExpand" Color="White" IsRunning="{Binding IsVisible,Source={x:Reference WaitFrame}}" />
+                <ActivityIndicator VerticalOptions="CenterAndExpand"
+                                   Color="White"
+                                   IsRunning="{Binding IsVisible,Source={x:Reference WaitFrame}}" />
             </StackLayout>
         </Frame>
-        <Frame HasShadow="false" 
+        <Frame HasShadow="false"
                IsVisible="{Binding ResetPasswordViewIsVisible}"
-                BackgroundColor="#99000000" 
+               BackgroundColor="#99000000"
                CornerRadius="0"
                RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=0}"
                RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=0}"
                RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height,Factor=1}"
                RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width, Factor=1}">
             <StackLayout VerticalOptions="CenterAndExpand">
-                <Frame HasShadow="false" BackgroundColor="White" HorizontalOptions="CenterAndExpand">
+                <Frame HasShadow="false"
+                       BackgroundColor="White"
+                       HorizontalOptions="CenterAndExpand">
                     <StackLayout>
-                        <Label Text="Email address:" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" HorizontalOptions="CenterAndExpand"/>
-                        <local:CustomEntry Placeholder="Enter your email" WidthRequest="250" Text="{Binding UserEmail}" />
-                        <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="{StaticResource Grey-Light-2}" />
-                        <Button Command="{Binding OnSubmitResetPasswordTapped}" BackgroundColor="{x:StaticResource Primary}" WidthRequest="150" HorizontalOptions="CenterAndExpand" Text="Reset Password" FontSize="Small" Margin="0,12,0,0" TextColor="White" />
-                        <Button BackgroundColor="Transparent" WidthRequest="150" HorizontalOptions="CenterAndExpand" Text="Cancel" Command="{Binding OnCancelResetPasswordTapped}" Margin="0,4,0,0" FontSize="Small" TextColor="{StaticResource Primary}" />
+                        <Label Text="Email address:"
+                               TextColor="{x:StaticResource Grey-Mid-1}"
+                               FontSize="Small"
+                               HorizontalOptions="CenterAndExpand" />
+                        <local:CustomEntry Placeholder="Enter your email"
+                                           WidthRequest="250"
+                                           Text="{Binding UserEmail}" />
+                        <BoxView HeightRequest="1"
+                                 Margin="0,-4,0,0"
+                                 BackgroundColor="{StaticResource Grey-Light-2}" />
+                        <Button Command="{Binding OnSubmitResetPasswordTapped}"
+                                BackgroundColor="{x:StaticResource Primary}"
+                                WidthRequest="150"
+                                HorizontalOptions="CenterAndExpand"
+                                Text="Reset Password"
+                                FontSize="Small"
+                                Margin="0,12,0,0"
+                                TextColor="White" />
+                        <Button BackgroundColor="Transparent"
+                                WidthRequest="150"
+                                HorizontalOptions="CenterAndExpand"
+                                Text="Cancel"
+                                Command="{Binding OnCancelResetPasswordTapped}"
+                                Margin="0,4,0,0"
+                                FontSize="Small"
+                                TextColor="{StaticResource Primary}" />
                     </StackLayout>
                 </Frame>
             </StackLayout>
         </Frame>
-        </RelativeLayout>
+    </RelativeLayout>
 </ContentPage>
