* ManageGo.Android.csproj: fixed issues trello #1
* App.xaml.cs:
* Info.plist:
* ManageGo.csproj:
* APIpaths.cs:
* DateRange.cs:
* TenantsPage.xaml:
* DataAccess.cs:
* PaymentsPage.xaml:
* ManageGo.iOS.csproj:
* UnitsListPage.xaml:
* MaintenanceTicket.cs:
* TicketDetailsPage.xaml:
* PaymentFilterView.xaml:
* TenantsPageModel.cs:
* WebAPI.cs:
* TicketDetailsPage.xaml.cs:
* PaymentsPageModel.cs:
* UnitsListPageModel.cs:
* MaintenanceTicketsPage.xaml:
* TicketFilterSelectView.xaml:
* TransactionsPageModel.cs:
* TicketDetailsPageModel.cs:
* NotificationsPageModel.cs:
* ApiEndPoint.cs:
* EventCreateItem.cs:
* MGDataAccessLibrary.csproj:
* AndroidManifest.xml:
* Resource.designer.cs:
* MaintenanceTicketsPageModel.cs:
* UserProcessor.cs:
* CreateEventResponseItem.cs:
* NotificationsActionItem.cs:
* TicketsProcessor.cs:
* TicketRequestItem.cs:
* NotificatinsProcessor.cs:
* TransactionsRequestItem.cs:

--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -264,10 +264,11 @@
                                             <StackLayout Orientation="Horizontal"
                                                          Margin="0">
                                                 <Image Source="profile_grey.png"
-                                                       VerticalOptions="CenterAndExpand"
+                                                       VerticalOptions="Start"
+                                                       Margin="0,2,0,0"
                                                        HorizontalOptions="Start" />
                                                 <Label Text="{Binding TenantDetails}"
-                                                       LineBreakMode="MiddleTruncation"
+                                                       LineBreakMode="WordWrap"
                                                        VerticalTextAlignment="Center"
                                                        VerticalOptions="CenterAndExpand"
                                                        FontSize="Small"
